--- a/소소한팁모음.md
+++ b/소소한팁모음.md
@@ -1,3 +1,8 @@
 ## 화면 와이드로 하기
 
 st.set_page_config(layout="wide")
+
+### 같은 문장이라도 꾸미기 추가하기
+
+st.write(f"Page {page_number} of {total_pages}")
+st.markdown(f"<div style='text-align: center;'>Page {page_number} of {total_pages}</div>", unsafe_allow_html=True)
